# cmake-modules

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README  README.md  use_lz4.c  use_odbc.c
modules/: FindCGAL.cmake  FindDL.cmake  FindGDAL.cmake  FindGEOS.cmake  FindODBC.cmake  registry.cmake
